--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -220,3 +220,20 @@
     transform: translateX(-50%);
   }
 }
+
+.user-menu ul li button {
+  width: 100%;
+  background: none;
+  border: none;
+  color: #e74c3c;
+  font-weight: 600;
+  font-size: 15px;
+  cursor: pointer;
+  text-align: left;
+  padding: 0;
+}
+
+.user-menu ul li button:hover {
+  background-color: #fdecea;
+  color: #c0392b;
+}
