--- a/blood-donation-support/src/Component/Header.scss
+++ b/blood-donation-support/src/Component/Header.scss
@@ -66,18 +66,19 @@
     }
 
     .login-button {
-        background: none;
+        background: #0079ED;
+        color: #fff;
         border: none;
         cursor: pointer;
         display: flex;
         align-items: center;
         font-weight: bold;
-        font-size: 16px;
+        font-size: 13px;
         gap: 6px;
         transition: all 0.2s ease;
 
         &:hover {
-            color: #007bff;
+            color: #0369a1;
         }
     }
 
@@ -133,6 +134,7 @@
             }
         }
     }
+
     .notification-icon {
         position: relative;
 
