--- a/blood-donation-support/src/Manager/Request/RequestReceive.scss
+++ b/blood-donation-support/src/Manager/Request/RequestReceive.scss
@@ -5,6 +5,14 @@
   font-family: 'Segoe UI', sans-serif;
 }
 
+h2 {
+  text-align: center;
+  font-size: 28px;
+  margin-bottom: 30px;
+  color: #333;
+  padding-top: 15px;
+}
+
 .request-card {
   display: flex;
   justify-content: space-between;
