--- a/blood-donation-support/src/Manager/Inventory/BloodInventory.scss
+++ b/blood-donation-support/src/Manager/Inventory/BloodInventory.scss
@@ -37,5 +37,14 @@
         margin-bottom: 8px;
       }
     }
+    
   }
+  .update-btn {
+      background-color: #007bff;
+      color: #fff;
+
+      &:hover {
+        background-color: #0056b3;
+      }
+    }
 }
