--- a/blood-donation-support/src/Manager/Request/RequestReceiveDetail.scss
+++ b/blood-donation-support/src/Manager/Request/RequestReceiveDetail.scss
@@ -82,5 +82,11 @@
     background-color: #f44336;
     color: white;
   }
+
+  
 }
+.complete-btn {
+    background-color: #007bff;
+    color: white;
+  }
 }
