--- a/blood-donation-support/src/Manager/Dashboard/Dashboard.scss
+++ b/blood-donation-support/src/Manager/Dashboard/Dashboard.scss
@@ -31,4 +31,18 @@
       color: #666;
     }
   }
+  .export-btn {
+  background-color: #007bff;
+  color: white;
+  border: none;
+  padding: 8px 16px;
+  margin-bottom: 16px;
+  border-radius: 6px;
+  cursor: pointer;
+  font-weight: bold;
+
+  &:hover {
+    background-color: #0056b3;
+  }
+}
 }
